<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edit_text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"></EditText>

    <EditText
        android:id="@+id/edit_text_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"></EditText>
    
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_text_priority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/priority"
        android:inputType="number"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_add_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_save_text"></androidx.appcompat.widget.AppCompatButton>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/load_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_load"></androidx.appcompat.widget.AppCompatButton>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_view_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"></TextView>

    </androidx.core.widget.NestedScrollView>


</androidx.appcompat.widget.LinearLayoutCompat>